--- a/Contact us.html
+++ b/Contact us.html
@@ -35,7 +35,7 @@ footer a {color: #a3a3a3;}
  <table style="width: 100%; text-align: center; border-spacing: 10px;">
     <tr>
       <td><a href="Neeco.html">Home</a></td>
-      <td><a href="Learn More.html">Learn More</a></td>
+      <td><a href="Learn more.html">Learn More</a></td>
       <td><a href="About us.html">About Us</a></td>
       <td><a href="Contact us.html">Contact Us</a></td>
     </tr>
